css/style.css
*{
  box-sizing: border-box;
}

#lejoopFourier{
  position: sticky;
  overflow-x: hidden;
  top: 0;
  z-index: -1;
}

.navBar a{
  display: inline-block;
  color: #565d74;
  text-decoration: none;
  font-size: 1.6rem;
  padding: .7em;
}

#GitHub,#LinkedIn {
  margin: 10px;
  display: inline;
  height: 40px;
  width: 40px;
}

#portrait{
  display: inline;
  width: 250px;
  height: 250px;
}

strong{
  color: white;
}

body {background-color: #0d1117;}

section{
  align-items: center;
  margin-top: 50px;
  background-color: rbga(13,17,23,.94);
  backdrop-filter: blur(8px);
  height: 100vh;
}

#portraitSection{
  border-radius: 200px;
  padding-top: 45px;
  display: flex;
  flex-direction: column;
  height: 100vh;
}


#aboutMeParagraph{
  color: #565d74;
  margin-bottom: 0px;
  margin-top: 10px;
  text-align: center;
}

h1 {
    color:#0d1117;
    font-size: 50px;
    background-color: #f78166;
    text-align: center;
    margin-bottom: 0px;
  }

#projects{
    width: auto;
    height: auto;
    padding-top: 10px;
  }

h2 {
  color:#565d74;
  text-align: center;
  margin: 2px;}  

canvas {
  margin:auto;
}

img{
  display: block;
  margin-left: auto;
  margin-right: auto;
}

